resources/blue-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green
  labels:
    app: blue-green
