resources/blue-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: blue-green
    app.kubernetes.io/instance: blue-green
  name: blue-green
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blue-green
    deploymentconfig: blue-green
  sessionAffinity: None
  type: ClusterIP
