resources/blue-green/claimshero-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
    argocd.argoproj.io/sync-wave: "1"
  creationTimestamp: null
  labels:
    app: claimshero
    app.kubernetes.io/instance: claimshero
  name: claimshero
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: claimshero
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
